# serializer version: 1
# name: test_available_transitions[accepted]
  '''
  <div class="submit-row" id="job-app-transitions">
              <p>Changer l'état de la candidature :</p>
              
              
              
                  <input class="danger js-with-confirm" name="transition_cancel" type="submit" value="Annuler"/>
              
              
          </div>
  '''
# ---
# name: test_available_transitions[cancelled]
  '''
  <div class="submit-row" id="job-app-transitions">
              <p>Changer l'état de la candidature :</p>
              
              
                  <input class="danger js-with-confirm" name="transition_accept" type="submit" value="Accepter"/>
                  <p>
                      <strong>Vous pouvez choisir un diagnostic d'eligibilité IAE, mais sa date d'expiration ne sera pas vérifiée. Si vous souhaitez que le système choisisse le dernier diagnostic valide, laissez le champ vide.</strong>
                  </p>
              
              
              
          </div>
  '''
# ---
# name: test_available_transitions[new]
  '''
  <div class="submit-row" id="job-app-transitions">
              <p>Changer l'état de la candidature :</p>
              
                  <input class="danger js-with-confirm" name="transition_process" type="submit" value="Passer à l'étude"/>
              
              
              
              
          </div>
  '''
# ---
# name: test_available_transitions[obsolete]
  '''
  <div class="submit-row" id="job-app-transitions">
              <p>Changer l'état de la candidature :</p>
              
              
                  <input class="danger js-with-confirm" name="transition_accept" type="submit" value="Accepter"/>
                  <p>
                      <strong>Vous pouvez choisir un diagnostic d'eligibilité IAE, mais sa date d'expiration ne sera pas vérifiée. Si vous souhaitez que le système choisisse le dernier diagnostic valide, laissez le champ vide.</strong>
                  </p>
              
              
              
                  <input class="danger js-with-confirm" name="transition_reset" type="submit" value="Remettre au statut nouveau"/>
              
          </div>
  '''
# ---
# name: test_available_transitions[postponed]
  '''
  <div class="submit-row" id="job-app-transitions">
              <p>Changer l'état de la candidature :</p>
              
              
                  <input class="danger js-with-confirm" name="transition_accept" type="submit" value="Accepter"/>
                  <p>
                      <strong>Vous pouvez choisir un diagnostic d'eligibilité IAE, mais sa date d'expiration ne sera pas vérifiée. Si vous souhaitez que le système choisisse le dernier diagnostic valide, laissez le champ vide.</strong>
                  </p>
              
              
              
          </div>
  '''
# ---
# name: test_available_transitions[prior_to_hire]
  '''
  <div class="submit-row" id="job-app-transitions">
              <p>Changer l'état de la candidature :</p>
              
              
                  <input class="danger js-with-confirm" name="transition_accept" type="submit" value="Accepter"/>
                  <p>
                      <strong>Vous pouvez choisir un diagnostic d'eligibilité IAE, mais sa date d'expiration ne sera pas vérifiée. Si vous souhaitez que le système choisisse le dernier diagnostic valide, laissez le champ vide.</strong>
                  </p>
              
              
              
          </div>
  '''
# ---
# name: test_available_transitions[processing]
  '''
  <div class="submit-row" id="job-app-transitions">
              <p>Changer l'état de la candidature :</p>
              
              
                  <input class="danger js-with-confirm" name="transition_accept" type="submit" value="Accepter"/>
                  <p>
                      <strong>Vous pouvez choisir un diagnostic d'eligibilité IAE, mais sa date d'expiration ne sera pas vérifiée. Si vous souhaitez que le système choisisse le dernier diagnostic valide, laissez le champ vide.</strong>
                  </p>
              
              
              
          </div>
  '''
# ---
# name: test_available_transitions[refused]
  '''
  <div class="submit-row" id="job-app-transitions">
              <p>Changer l'état de la candidature :</p>
              
              
                  <input class="danger js-with-confirm" name="transition_accept" type="submit" value="Accepter"/>
                  <p>
                      <strong>Vous pouvez choisir un diagnostic d'eligibilité IAE, mais sa date d'expiration ne sera pas vérifiée. Si vous souhaitez que le système choisisse le dernier diagnostic valide, laissez le champ vide.</strong>
                  </p>
              
              
              
          </div>
  '''
# ---
